--- a/About.html
+++ b/About.html
@@ -7,15 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Chivo&family=Oswald&display=swap" rel="stylesheet">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@200;400&family=Nanum+Myeongjo&family=Oswald&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -43,18 +34,36 @@
         </div>
     </nav>
 
-      <div class="text">
-        <h3 class="first-h3">WE ARE OPEN AGAIN</h3>
-        <h1 class="main-h1">BOOK OR ORDER ONLINE</h1>
-        <p class="paragraph">MORE INFORMATION ABOUT RESERVES DOWN BELOW</p>
-        <div class="buttons">
-        <button class="first butt">RESERVES</button>
-        <button class="second butt">ORDER ONLINE</button>
+    <div class="about-container">
+        <div class="about-section">
+          <div class="about-content">
+            <h1>Welcome to [Your Restaurant Name]</h1>
+            <p>
+              Discover a culinary journey like no other at [Your Restaurant Name]. 
+              Our story began with a vision to bring exquisite flavors and a 
+              warm ambiance to the heart of [Your City]. 
+            </p>
+          </div>
+          <div class="about-image">
+            <img src="path/to/your/restaurant-image.jpg" alt="Restaurant Image">
+          </div>
+        </div>
+    
+        <div class="about-section reverse">
+          <div class="about-content">
+            <h2>Crafting Culinary Delights</h2>
+            <p>
+              At [Your Restaurant Name], we take pride in sourcing the finest 
+              ingredients to create dishes that tantalize your taste buds. 
+              Our chefs blend creativity and tradition to offer a menu that 
+              reflects our passion for [Type of Cuisine] cuisine.
+            </p>
+          </div>
+          <div class="about-image">
+            <img src="path/to/another/image.jpg" alt="Another Image">
+          </div>
         </div>
       </div>
-
-     
-
 </body>
 <script src="script.js"></script>
 </html>
