--- a/About.html
+++ b/About.html
@@ -34,36 +34,16 @@
         </div>
     </nav>
 
-    <div class="about-container">
-        <div class="about-section">
-          <div class="about-content">
-            <h1>Welcome to [Your Restaurant Name]</h1>
-            <p>
-              Discover a culinary journey like no other at [Your Restaurant Name]. 
-              Our story began with a vision to bring exquisite flavors and a 
-              warm ambiance to the heart of [Your City]. 
-            </p>
-          </div>
-          <div class="about-image">
-            <img src="path/to/your/restaurant-image.jpg" alt="Restaurant Image">
-          </div>
-        </div>
-    
-        <div class="about-section reverse">
-          <div class="about-content">
-            <h2>Crafting Culinary Delights</h2>
-            <p>
-              At [Your Restaurant Name], we take pride in sourcing the finest 
-              ingredients to create dishes that tantalize your taste buds. 
-              Our chefs blend creativity and tradition to offer a menu that 
-              reflects our passion for [Type of Cuisine] cuisine.
-            </p>
-          </div>
-          <div class="about-image">
-            <img src="path/to/another/image.jpg" alt="Another Image">
-          </div>
-        </div>
+    <div class="story-container">
+      <div class="story-image">
+          <img src="Images/restaurant.jpg" alt="Restaurant Photo">
       </div>
+      <div class="story-text">
+          <h2 class="h2-about">Our Story</h2>
+          <p>Welcome to our Restaurant, where culinary excellence meets a charming atmosphere. We take pride in serving delicious meals made from the finest ingredients, sourced locally whenever possible. Our chefs are passionate about creating memorable dining experiences for our guests.</p>
+          <p>Whether you're here for a casual meal with friends or a special celebration, our diverse menu and warm ambiance make [Your Restaurant Name] the perfect choice. Join us on a culinary journey that reflects our commitment to quality, creativity, and a love for good food.</p>
+      </div>
+  </div>
 </body>
 <script src="script.js"></script>
 </html>
