--- a/Order.html
+++ b/Order.html
@@ -64,7 +64,7 @@
                         <div class="drink-details">
                             <p class="item-name">Coca-Cola  0.5l</p>
                             <p class="item-price">$1.20</p>
-                            <button>Order</button>
+                            <button id="myButton">Order</button>
                         </div>
                         </div>
                         <div class="drink-item">
@@ -195,5 +195,5 @@
          </div>
         </div>
 </body>
-<script src="script.js"></script>
+<script src="Order.js"></script>
 </html>
