--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="About.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="Sing_up.html">SING UP</a>
                     </li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
       <div class="story-text">
           <h2 class="h2-about">Our Story</h2>
           <p>Welcome to our Restaurant, where culinary excellence meets a charming atmosphere. We take pride in serving delicious meals made from the finest ingredients, sourced locally whenever possible. Our chefs are passionate about creating memorable dining experiences for our guests.</p>
-          <p>Whether you're here for a casual meal with friends or a special celebration, our diverse menu and warm ambiance make [Your Restaurant Name] the perfect choice. Join us on a culinary journey that reflects our commitment to quality, creativity, and a love for good food.</p>
+          <p>Whether you're here for a casual meal with friends or a special celebration, our diverse menu and warm ambiance make our Restaurant the perfect choice. Join us on a culinary journey that reflects our commitment to quality, creativity, and a love for good food.</p>
       </div>
   </div>
 </body>
