--- a/Order.html
+++ b/Order.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="About.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="Sing_up.html">SING UP</a>
                     </li>
                 </ul>
             </div>
