--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="About.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Sing_up.html">SING UP</a>
+                        <a class="nav-link" href="Sing_up.html" id="singedUp">SING UP</a>
                     </li>
                 </ul>
             </div>
@@ -72,5 +72,5 @@
      
 
 </body>
-<script src="Home.js"></script>
+<script type="module"  src="Home.js"></script>
 </html>
