--- a/Order.html
+++ b/Order.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,7 +67,7 @@
                         <img src="images/coca-cola.jpg" alt="Drink 1">
                         <div class="drink-details">
                             <p class="item-name">Coca-Cola  0.5l</p>
-                            <p class="item-price">$1.20</p>
+                            <p class="item-price"><span>$ </span>1.20</p>
                             <button id="myButton" onclick="hadleOrder('Coca-Cola  0.5l','$1.20')">Order</button>
                         </div>
                         </div>
@@ -74,7 +75,7 @@
                             <img src="images/Sprite.jpg" alt="Drink 1">
                             <div class="drink-details">
                                 <p class="item-name">Sprite  0.5l</p>
-                                <p class="item-price">$1.00</p>
+                                <p class="item-price"><span>$ </span>1.00</p>
                                 <button id="myButton" onclick="hadleOrder('Sprite  0.5l','$1.00')">Order</button>
                             </div>
                         </div>
@@ -82,7 +83,7 @@
                             <img src="images/Fanta.jpg" alt="Drink 1">
                             <div class="drink-details">
                                 <p class="item-name">Fanta  0.5l</p>
-                                <p class="item-price">$1.20</p>
+                                <p class="item-price"><span>$ </span>1.20</p>
                                 <button id="myButton" onclick="hadleOrder('Fanta  0.5l','$1.20')">Order</button>
                             </div>
                         </div>
@@ -90,7 +91,7 @@
                             <img src="images/Water.jpg" alt="Drink 1">
                             <div class="drink-details">
                                 <p class="item-name">Water  0.5l</p>
-                                <p class="item-price" >$0.50</p>
+                                <p class="item-price" ><span>$ </span>0.50</p>
                                 <button onclick="hadleOrder('Water  0.5l','$0.50')">Order</button>
                             </div>
                         </div>
@@ -98,7 +99,7 @@
                             <img src="images/Pepsi.jpg" alt="Drink 1">
                             <div class="drink-details">
                                 <p class="item-name">Pepsi 0.5l</p>
-                                <p class="item-price">$1.20</p>
+                                <p class="item-price"><span>$ </span>1.20</p>
                                 <button onclick="hadleOrder('Pepsi  0.5l','$1.20')">Order</button>
                             </div>
                         </div>  
@@ -111,7 +112,7 @@
                     <img src="images/Carbonara.jpg" alt="Drink 1">
                     <div class="drink-details">
                         <p class="item-name">Spaghetti Carbonara </p>
-                        <p class="item-price">$6.00</p>
+                        <p class="item-price"><span>$ </span>6.00</p>
                         <button onclick="hadleOrder('Spaghetti Carbonara','$6.00')">Order</button>
                     </div>
                     </div>
@@ -119,7 +120,7 @@
                         <img src="images/Bolognese.htm" alt="Drink 1">
                         <div class="drink-details">
                             <p class="item-name">Spaghetti Bologneze</p>
-                            <p class="item-price">$8.00</p>
+                            <p class="item-price"><span>$ </span>8.00</p>
                             <button onclick="hadleOrder('Spaghetti Bologneze','$8.00')">Order</button>
                         </div>
                     </div>
@@ -127,7 +128,7 @@
                         <img src="images/MeatBalls.jpg" alt="Drink 1">
                         <div class="drink-details">
                             <p class="item-name">Spaghetti & MeatBalls</p>
-                            <p class="item-price">$5.00</p>
+                            <p class="item-price"><span>$ </span>5.00</p>
                             <button onclick="hadleOrder('Spaghetti & MeatBalls','$5.00')">Order</button>
                         </div>
                     </div>
@@ -135,7 +136,7 @@
                         <img src="images/Chicken.jpg" alt="Drink 1">
                         <div class="drink-details">
                             <p class="item-name">Chicken Spaghetti</p>
-                            <p class="item-price">$4.50</p>
+                            <p class="item-price"><span>$ </span>4.50</p>
                             <button onclick="hadleOrder('Chicken Spaghetti','$4.50')">Order</button>
                         </div>
                     </div>
@@ -143,7 +144,7 @@
                         <img src="images/Cheese.jpg" alt="Drink 1">
                         <div class="drink-details">
                             <p class="item-name">Cheese Spaghetii</p>
-                            <p class="item-price">$6.00</p>
+                            <p class="item-price"><span>$ </span>6.00</p>
                             <button onclick="hadleOrder('Cheese Spaghetti','$6.00')">Order</button>
                         </div>
                     </div>
@@ -157,7 +158,7 @@
                 <img src="images/Pepperoni.jpg" alt="Drink 1">
                 <div class="drink-details">
                     <p class="item-name">Pepperoni</p>
-                    <p class="item-price">$7.00</p>
+                    <p class="item-price"><span>$ </span>7.00</p>
                     <button onclick="hadleOrder('Pepperoni','$7.00')">Order</button>
                 </div>
                 </div>
@@ -165,7 +166,7 @@
                     <img src="images/Burrata.jpg" alt="Drink 1">
                     <div class="drink-details">
                         <p class="item-name">Burrata & Sopressata</p>
-                        <p class="item-price">$9.00</p>
+                        <p class="item-price"><span>$ </span>9.00</p>
                         <button onclick="hadleOrder('Burrata & Sopressata','$9.00')">Order</button>
                     </div>
                 </div>
@@ -173,7 +174,7 @@
                     <img src="images/Calzone.jpg" alt="Drink 1">
                     <div class="drink-details">
                         <p class="item-name">Pizza Calzone</p>
-                        <p class="item-price">$6.00</p>
+                        <p class="item-price"><span>$ </span>6.00</p>
                         <button onclick="hadleOrder('Pizza Calzone','$6.00')">Order</button>
                     </div>
                 </div>
@@ -181,7 +182,7 @@
                     <img src="images/Frango.jpg" alt="Drink 1">
                     <div class="drink-details">
                         <p class="item-name">Pizza Frango</p>
-                        <p class="item-price">$5.50</p>
+                        <p class="item-price"><span>$ </span>5.50</p>
                         <button onclick="hadleOrder('Pizaa Frango','$5.50')">Order</button>
                     </div>
                 </div>
@@ -189,7 +190,7 @@
                     <img src="images/Pizza.jpg" alt="Drink 1">
                     <div class="drink-details">
                         <p class="item-name">Pizza Margherita</p>
-                        <p class="item-price">$6.50</p>
+                        <p class="item-price"><span>$ </span>6.50</p>
                         <button onclick="hadleOrder('Pizza Margherita','$6.50')">Order</button>
                     </div>
                 </div>
