--- a/Sing_up.html
+++ b/Sing_up.html
@@ -37,7 +37,7 @@
     </nav>
     <div class="box-container-of-singout" id="sing-out-box">
         <div class="box">
-          <a href="#">Reservations/Orders</a>
+          <a href="Reservation-Orders.html">Reservations/Orders</a>
           <a id="sing-out-btn">Sign-out</a>
         </div>
       </div>
