--- a/Home.html
+++ b/Home.html
@@ -18,6 +18,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid" >
             <a class="navbar-brand" href="#">Restaurant</a>
@@ -42,7 +43,7 @@
             </div>
         </div>
     </nav>
-
+</header>
       <div class="text">
         <h3 class="first-h3">WE ARE OPEN AGAIN</h3>
         <h1 class="main-h1">BOOK OR ORDER ONLINE</h1>
