--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
         <h1 class="main-h1">BOOK OR ORDER ONLINE</h1>
         <p class="paragraph">MORE INFORMATION ABOUT RESERVES DOWN BELOW</p>
         <div class="buttons">
-        <button id="reservation" class="first butt">RESERVES</button>
+        <button id="reservation" class="first butt">RESERVE</button>
         <buttonn id="order-online" class="second butt" >ORDER ONLINE</button>
         </div>
       </div>
